class FacilityBooking:
    pass