class FacilityStatus:
    pass

class ShareFacility:
    def __init__(self):
        pass

class WashingMachine:
    pass

class MeetingRoom:
    pass

class Locker:
    pass