class Room_Booking:
    def __init__(self):
        self.__id
        self.__room
        self.__detail: str = None
        